frontend/src/utils/EasyCropper.css
/* Cropper */

.crop-modal {
  max-width: 100vw;
  max-height: 100vh;
  width: 100%;
  height: 100%;
  background-color: var(--clr-back-300);
}
.modal-container {
  width: 450px;
  height: 100%;
  margin: 0 auto;
}

.cropper-container {
  height: 90%;
  width: 100%;
  max-width: 450px;
  max-height: 550px;
  margin: 1.5rem auto 0;
}

.cropper-container--cropper {
  height: 80%;
  max-height: 550px;
  max-width: 450px;
  position: relative;
}

.cropper-container--controls {
  /* height: 10%; */
  display: flex;
  align-items: center;
  justify-content: center;
  /* margin: auto; */
  width: 100%;
  padding: 1rem;
  gap: 2rem;
  margin-top: 1.5rem;
}
.cropper-container--controls--slider {
  width: 350px;
}
.cropper-container--controls--slider p {
  padding-bottom: 0.5rem;
}

.cropper-buttons-container {
  /* height: 10%; */
  display: flex;
  align-items: center;
  justify-content: space-between;
  max-width: 450px;
  margin-top: 1.5rem;
}
.cropper-cancel-button {
  color: var(--clr-neutral-300);
  background-color: var(--clr-neutral-600);
  min-width: fit-content;
  padding: 10px;
  border-radius: 5px;
  border: none;
  cursor: pointer;
}
.cropper-save-button {
  color: var(--clr-back-300);
  background-color: var(--clr-accent-300);
  min-width: 75px;
  padding: 10px;
  border-radius: 5px;
  border: none;
  cursor: pointer;
}

.cropper-save-button:hover,
.cropper-cancel-button:hover {
  opacity: 0.5;
}

/********** Range Input Styles **********/
/*Range Reset*/
.cropper-range {
  -webkit-appearance: none;
  appearance: none;
  background: transparent;
  cursor: pointer;
  width: 100%;
}

/* Removes default focus */
.cropper-range:focus {
  outline: none;
}

/* slider track */
.cropper-range::-webkit-slider-runnable-track,
.cropper-range::-moz-range-track {
  background-color: var(--clr-accent-300);
  border-radius: 0.5rem;
  height: 0.5rem;
}

/* slider thumb */
.cropper-range::-webkit-slider-thumb {
  -webkit-appearance: none; /* Override default look */
  appearance: none;
  margin-top: -12px; /* Centers thumb on the track */
}
.cropper-range::-moz-range-thumb {
  border: none; /*Removes extra border that FF applies*/
  border-radius: 50%; /*Removes default border-radius that FF applies*/
}
.cropper-range::-webkit-slider-thumb,
.cropper-range::-moz-range-thumb {
  /*custom styles*/
  background-color: var(--clr-compl-600);
  height: 1rem;
  width: 1rem;
}

.cropper-range:focus::-webkit-slider-thumb,
.cropper-range:focus::-moz-range-thumb {
  outline: 2px solid var(--clr-neutral-400);
  outline-offset: 0.125rem;
}

